# StrangeUtaGame

./: .gitignore  CHANGELOG.md  README.md  README_DEV.md  build.py  config.json  dictionary.json  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup_env.bat  setup_env.sh  singers.json
.github/workflows/: build.yml  release.yml
docs/: EMBEDDING.md  application.md  auto_update.md  ui.md
scripts/: .runtime-hash-cache.json  release.py
src/strange_uta_game/: __version__.py  runtime_paths.py
src/strange_uta_game/backend/application/: auto_check_service.py  timing_service.py
src/strange_uta_game/backend/domain/: __init__.py  entities.py  models.py  project.py
src/strange_uta_game/backend/infrastructure/audio/: bass_engine.py  bass_tsm_engine.py  keysound_player.py  sounddevice_engine.py  tsm_cache.py  video_converter.py
src/strange_uta_game/backend/infrastructure/exporters/: lrc_exporter.py  nicokara_exporter.py  txt2ass_exporter.py
src/strange_uta_game/backend/infrastructure/parsers/: english_ruby.py  inline_format.py  llm_ruby.py  lyric_parser.py  rl_dictionary.py  ruby_analyzer.py  text_splitter.py
src/strange_uta_game/backend/infrastructure/persistence/: sug_io.py
src/strange_uta_game/bass/macos/arm64/: libbass.dylib  libbass_fx.dylib
src/strange_uta_game/bass/macos/x86_64/: libbass.dylib  libbass_fx.dylib
src/strange_uta_game/config/: config.json  dictionary.json
src/strange_uta_game/frontend/: font_utils.py  main_window.py  project_store.py  theme.py  thread_cleanup.py  winrt_japanese_guide.py  workers.py
src/strange_uta_game/frontend/editor/: fulltext_interface.py  line_interface.py  timing_interface.py
src/strange_uta_game/frontend/editor/timing/: bulk_change_dialog.py  dialogs.py  dict_candidate_dialog.py  file_loader.py  karaoke_preview.py  toolbar.py  transport_bar.py
src/strange_uta_game/frontend/export/: emoji_tag_dialog.py  export_interface.py
src/strange_uta_game/frontend/home/: home_interface.py
src/strange_uta_game/frontend/settings/: app_settings.py  calibration_dialog.py  cards.py  dictionary_dialog.py  network_dictionary_dialog.py  nicokara_dialog.py  settings_interface.py
src/strange_uta_game/frontend/settings/sub_interfaces/: about.py  auto_check.py  dictionary.py  playback.py  shortcut.py  timing.py  ui_settings.py
src/strange_uta_game/frontend/singer/: singer_interface.py
src/strange_uta_game/resource/: icon.icns
src/strange_uta_game/updater/: __init__.py  http_client.py  installer.py  manifest.py  sources.py  worker.py
src/strange_uta_game/updater/ui/: proxy_card.py  source_order_dialog.py  update_card.py  update_dialog.py
tests/unit/: test_embedded_contract.py  test_runtime_paths.py
tests/unit/application/: test_auto_check_dict_okurigana.py  test_auto_check_service.py
tests/unit/domain/: test_character.py
tests/unit/frontend/: test_thread_cleanup.py
tests/unit/infrastructure/: test_exporters.py  test_inline_format.py  test_lyric_parser.py  test_ruby_analyzer.py  test_tsm_cache.py
tests/unit/updater/: test_installer.py  test_manifest.py  test_release_script.py  test_settings.py  test_sources.py
updater_app/: __init__.py  build_updater.py  main.py
