[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strange-uta-game"
version = "0.1.0"
description = "一款由 RhythmicaLyrics 启发的歌词打轴软件"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.9"
authors = [
    {name = "StrangeUtaGame Team"}
]
keywords = ["karaoke", "lyrics", "timing", "rhythmica", "subtitle"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    # ── 跨平台核心依赖 ──
    "PyQt6>=6.6.0",
    "PyQt6-Fluent-Widgets>=1.5.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "pedalboard>=0.9.0",
    "numpy>=1.24.0",
    "fugashi>=1.0",
    "unidic-lite>=1.0",
    "jaconv>=0.5.0",
    "pyphen>=0.17.0",
    "requests>=2.32.0",
    "urllib3>=2.6.0",
    "charset-normalizer>=3.4.0",
    "certifi>=2025.0.0",
    "idna>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.2.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.7.1",
    "psutil>=5.9.0",
]
# 打包工具
build = [
    "pyinstaller>=6.19.0",
    "pyinstaller-hooks-contrib>=2026.4",
]
# 全平台 + 开发
all = ["strange-uta-game[win,unix,dev,build]"]

[project.scripts]
strange-uta-game = "strange_uta_game.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
strange_uta_game = [
    "resource/*",
    "bass/*.dll",
    "bass/x64/*.dll",
    "bass/macos/arm64/*.dylib",
    "bass/macos/x86_64/*.dylib",
    "bass/linux64/*.so",
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by black)
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["sounddevice", "soundfile", "pedalboard", "pedalboard.io", "numpy", "fugashi", "unidic_lite"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
qt_api = "pyqt6"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "performance: marks tests as performance tests",
]

[tool.coverage.run]
source = ["src/strange_uta_game"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
